k8s/manifests/production-apps/minio-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-api
  namespace: production-external-apps
spec:
  type: ClusterIP
  ports:
    - port: 9768
      targetPort: 9768
      protocol: TCP
  selector: {}
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-api
  namespace: production-external-apps
subsets:
  - addresses:
      - ip: 192.168.1.250  # Replace with Proxmox IP
    ports:
      - port: 9768
