k8s/manifests/production-apps/portainer.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: production-external-apps
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector: {}
---
apiVersion: v1
kind: Endpoints
metadata:
  name: portainer
  namespace: production-external-apps
subsets:
  - addresses:
      - ip: 192.168.1.234  # Replace with portainer IP
    ports:
      - port: 9000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: portainer-headers
  namespace: production-external-apps
spec:
  headers:
    sslProxyHeaders:
      X-Forwarded-Proto: "https"
    customRequestHeaders:
      X-Forwarded-For: "true"
